fixed userMsg z-index

--- a/src/styles/components/_user-msg.scss
+++ b/src/styles/components/_user-msg.scss
@@ -11,7 +11,7 @@
   text-overflow: ellipsis;
   padding: 2rem;
   border-radius: 10px;
-  z-index: 1;
+  z-index: 8;
   position: fixed;
   right: 1rem;
   bottom: 3rem;
